# Playground

./: .env.example  .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  server.js  vercel.json  vite.config.js
.github/workflows/: release.yml
backend/supabase/: marketplace_multi_post_migration.sql  profile_public_id_migration.sql  schema.sql  seed.sql  storage.sql
docs/: DEPLOYMENT_CHECKLIST.md  FEATURE_INVENTORY.md  MIGRATION_PLAN.md  PRODUCTION_AUDIT.md  VERCEL_SUPABASE_DEPLOY.md
public/: version.json
scripts/: release-windows.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.js  featureRegistry.js  router.js  state.js  storage.js
src/components/boards/: BoardWorkspace.js
src/components/canvas/: CanvasWorkspace.js
src/components/editor/: NoteEditor.js
src/components/friends/: FriendsPageContent.js
src/components/legacy/: LegacyFeatureBridge.js  LegacyViewMount.js
src/components/market/: MarketPage.js
src/components/notifications/: NotificationsPanel.js
src/components/profile/: ProfileEditor.js
src/constants/: env.js  release.js
src/data/: mockData.js  seedData.js  workspacePresets.js
src/hooks/: useAppState.js  useModalState.js  useScrollState.js
src/pages/: BoardPage.js  CanvasPage.js  FriendsPage.js  MarketPage.js  MessagesPage.js  NotificationsPage.js  SheetPage.js  VaultPage.js
src/public/: PublicApp.js
src/styles/: index.css
src/utils/: constants.js  dom.js  format.js  helpers.js  marketProfiles.js  performance.js
(+69 files in other folders)
