[package]
name = "forgebook_app"
version = "0.1.0"
edition = "2021"
description = "ForgeBook desktop shell"
authors = ["Balin"]
license = "MIT"
build = "build.rs"

[lib]
name = "forgebook_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
notify = "6"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
tempfile = "3"
url = "2"
