[package]
name = "forgebook"
version = "0.1.0-alpha"
description = "ForgeBook desktop workspace for game designers and development teams."
authors = ["ForgeBook"]
license = ""
repository = "https://github.com/balinek468-beep/Playground"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tempfile = "3"
notify = "6"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
